test/parser/good/if.ks
int main()
{
    int a = 10;
    int b;
    if ( a < 10 )
    {
        b = 20;
    }
    else
    {
        b = 30;
    }
    return b;
}