test/parser/bad/fn_decl_params.ks
int main( a )
{
    return 3;
}